Vandana - Modified the caseXMl stringTemplates and added the failsafe plugin to the parent pom